# LazyLog-Artifact

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gen_rdma_config.py
cfg/: be.prop  be.prop.template  conslog.prop  dl_client.prop  durlog.prop  kv.prop  prop_gen.py  shard0.prop  shard1.prop  shard2.prop  shard3.prop  shard4.prop
cfg_3_way/: be.prop  config.yaml  dl_client.prop.template  durlog.prop.template  shard.prop  shard.prop.template  shard0.prop  shard1.prop  shard2.prop  shard3.prop  shard4.prop
scripts/: analyze.py  common.sh  deps.sh  fig12.sh  fig13.sh  fig13_st.sh  fig13b.sh  fig13b_st.sh  fig6.sh  fig7.sh  install_mlnx.sh  kafka_ctrl.sh  kill_process.sh  run.sh  shard_ctrl.sh  usr_cfg.sh
scripts/benchmark/: analyze_fig_8_9.py  avg_lat.py  common.sh  requirements.txt  run.sh  run_five_shard.sh  run_lag_corfu.sh  run_lag_erwin.sh  run_single_shard.sh
scripts/benchmark/cfg/: be.prop  be.prop.template  config.yaml  conslog.prop  conslog.prop.template  consumer.prop  dl_client.prop  dl_client.prop.template  durlog.prop  durlog.prop.template  producer.prop  prop_gen.py  shard.prop.template  shard0.prop  shard1.prop  shard2.prop  shard3.prop  shard4.prop
scripts/benchmark/workloads/: corfu-five-shard.yaml  corfu-single-shard.yaml  erwin-lag.yaml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  ll_kv.cc  ll_kv.h
src/benchmark/: CMakeLists.txt
src/benchmark/include/: commons.hpp  cxxopts.hpp  workload.hpp
src/benchmark/include/producer_consumer/: consumer.hpp  producer.hpp
src/benchmark/include/producer_consumer/lazylog/: consumer_lazylog.hpp  pc_lazylog.hpp  producer_lazylog.hpp
src/benchmark/src/: commons.cpp  main.cpp  workload.cpp
src/benchmark/src/producer_consumer/: consumer.cpp  producer.cpp
src/benchmark/src/producer_consumer/lazylog/: consumer_lazylog.cpp  pc_lazylog.cpp  producer_lazylog.cpp
src/client/: CMakeLists.txt  basic_client.cc  lazylog_cli.cc  lazylog_cli.h  lazylog_scalable_cli.cc  lazylog_scalable_cli.h
src/client/benchmarking/: CMakeLists.txt  append_bench.cc  mixed_bench.cc  read_bench.cc
src/cons_log/: CMakeLists.txt  cons_log.cc  cons_log.h  cons_log_cli.h  cons_log_erpc_cli.cc  cons_log_erpc_cli.h  cons_svr.cc  erpc_cl_transport.cc  erpc_cl_transport.h
src/cons_log/storage/: CMakeLists.txt  README.md  basic_backend.cc  basic_backend_read.cc  kafka_backend.cc  kafka_backend.h  naive_backend.cc  naive_backend.h  shard_client.cc  shard_client.h  shard_server.cc  shard_server.h  shard_server_wo_opt.cc  shard_server_wo_opt.h  shard_svr.cc  shard_svr_wo_opt.cc  storage_backend.h
src/cons_log/storage/datalog/: CMakeLists.txt  README.md  datalog.cc  datalog.h  datalog_client.cc  datalog_client.h  datalog_svr.cc
src/dur_log/: CMakeLists.txt  basic_flat_cli.cc  dur_log.cc  dur_log.h  dur_log_cli.h  dur_log_erpc_cli.cc  dur_log_erpc_cli.h  dur_log_flat.cc  dur_log_flat.h  dur_log_flat_cli.cc  dur_log_flat_cli.h  dur_log_mock.cc  dur_log_mock.h  dur_svr.cc  erpc_dl_transport.cc  erpc_dl_transport.h
src/rpc/: CMakeLists.txt  circular_buffer.h  common.h  erpc_transport.cc  erpc_transport.h  log_entry.cc  log_entry.h  rpc_factory.cc  rpc_factory.h  rpc_token.cc  rpc_token.h  transport.cc  transport.h
src/utils/: CMakeLists.txt  properties.cc  properties.h  ratelimit.h  sequencer.cc  sequencer.h  timer.cc  timer.h  utils.h
tst/: CMakeLists.txt  flat_log_test.cc  log_entry_test.cc
